--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sc0vu/web3.php",
+    "name": "web3p/web3.php",
     "description": "Ethereum web3 interface.",
     "type": "library",
     "license": "MIT",
@@ -11,13 +11,13 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "^6.3|^7.0",
-        "PHP": "^7.1|^8.0",
+        "PHP": "^7.2|^8.0",
         "kornrunner/keccak": "~1.0",
-        "phpseclib/phpseclib": "~2.0.11",
+        "phpseclib/phpseclib": "~2.0.30",
         "ext-mbstring": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~8.0|~9.0"
     },
     "autoload": {
         "psr-4": {
